--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,21 +116,13 @@
   display: flex;
   width: 100vw;
   height: 100%;
-  background: radial-gradient(white, #a7ffa7);
+  background: linear-gradient(45deg, #ffc1c1, #ffdbdb, #ffa8a8);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 9;
   justify-content: center;
   align-items: center;
-}
-
-.WinScreen:before {
-  content: "You Won";
-  font-size: 3rem;
-  font-family: sans-serif;
-  font-weight: 700;
-  color: green;
 }
 
 .mission-popup {
