--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -13,7 +13,7 @@
         display: none;
       }
       body {
-        background: url(/images/green_bg.jpeg);
+        background: url(/images/login-bg.avif);
         background-size: cover;
         background-position: center;
       }
