--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -176,10 +176,11 @@
               <h1 class="text-warning" id="userRankAfterGameOver">1</h1>
               <p class="lead">Your Ranking</p>
             </div>
-            <a href="" class="btn btn-info me-2">Restart Game</a>
-            <a href="/user/profile" class="btn btn-secondary me-2"
+            <a href="" class="btn btn-info m-2">Restart Game</a>
+            <a href="/user/profile" class="btn btn-secondary m-2"
               >Go Back to Profile</a
             >
+            <button class="btn btn-warning ldrbrd_btn">Leaderboard</button>
           </div>
         </div>
       </div>
