Eye button Z-Index

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -127,7 +127,7 @@
         <span>Full Screen</span>
       </div>
     </div>
-    <div class="text-end fixed-top">
+    <div class="text-end fixed-top" style="z-index: 3">
       <div class="refresh" style="position: fixed">
         <div class="refresh-btn">
           <span class="fa fa-refresh"></span>
