--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -259,13 +259,7 @@
               </div>
             </div>
             <div class="vj_dynamic maplist">
-              <div
-                class="justify-content-center"
-                style="
-                  background: url(/images/game_mode.jpg) no-repeat;
-                  background-size: cover;
-                "
-              >
+              <div class="justify-content-center">
                 <form class="form my-5 bg-light p-3 m-0 new_map_form">
                   <h3 class="text-center m-0 mb-3">New Map</h3>
                   <div class="row">
