--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -169,14 +169,14 @@
           <div class="text-center shadow-lg bg-white p-4">
             <h2 class="pb-3 mb-3 border-bottom text-danger">Game Over</h2>
             <p class="lead text-center">
-              You have eaten by Pacman which cause <b>Game-Over</b> You can
-              Restart the Game to Score more and win the Game!
+              Your current ranking is displayed below.<br />Select
+              <b>Start Game</b> to attempt a higher score.
             </p>
             <div class="my-3 text-center">
               <h1 class="text-warning" id="userRankAfterGameOver">1</h1>
               <p class="lead">Your Ranking</p>
             </div>
-            <a href="" class="btn btn-info m-2">Restart Game</a>
+            <a href="" class="btn btn-info m-2">Start Game</a>
             <a href="/user/profile" class="btn btn-secondary m-2"
               >Go Back to Profile</a
             >
