--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -33,9 +33,8 @@
     <div class="row vh-100 justify-content-center align-items-center m-0">
       <div class="col-sm-10 col-md-8 col-lg-6">
         <h2 class="text-center text-warning">
-          Welcome To
           <span class="bg-warning rounded-1 border-1 p-3 text-white"
-            >Urban Escape</span
+            >WELCOME!</span
           >
         </h2>
         <% if (locals.user && user.savedMaps && user.savedMaps.length>0) { %>
@@ -71,9 +70,9 @@
             <a href="/user/profile">Profile</a>
           </p>
           <% }else{ %>
-          <p class="alert alert-warning">
-            Please <a href="/auth">Login</a> to enjoy all features
-          </p>
+          <div class="text-center">
+            <a class="btn btn-warning" href="/auth">Please Login</a>
+          </div>
           <%}%>
         </div>
       </div>
