--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -162,7 +162,7 @@
       </div>
     </div>
     <div class="WinScreen" style="display: none">
-      <div class="row p-o m-0 justify-content-center">
+      <div class="row p-o m-0 justify-content-center w-100">
         <div
           class="vh-100 d-inline-flex col-sm-10 col-md-8 col-lg-6 justify-content-center align-items-center"
         >
