--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -1,5 +1,5 @@
 <div class="howtoplaycontainer"></div>
-<div class="user-navbar" style="display: none">
+<div class="user-navbar">
   <div class="game-tracker">
     <div class="internal">
       <div class="row">
