--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -167,6 +167,23 @@
                       </button>
                     </div>
                     <div class="toggle-hide border-top mt-2 pt-2">
+                      <div
+                        class="header-live-updater row pb-3 mb-3 border-bottom"
+                      >
+                        <div class="col-6">
+                          <div
+                            class="d-inline-flex justify-content-center align-items-center w-100 h-100"
+                          >
+                            <div class="file-folder-container">
+                              <div
+                                class="file-folder mx-auto mb-2"
+                                onclick="uploadPacmanImage()"
+                              ></div>
+                              <p class="m-0 text-center">Pacman Picture</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                       <div class="pacman-toggle-status">
                         <label class="custom-switch">
                           <input
@@ -291,66 +308,77 @@
                       <button class="w-100 btn btn-warning">Create</button>
                     </div>
                     <div class="col-12 mt-3">
-                      <div class="d-inline-flex w-100 align-items-center">
-                        <div class="me-3">
-                          <input
-                            type="hidden"
-                            id="mapPlayableFlag"
-                            value="false"
-                          />
-                          <a
-                            class="btn btn-primary"
-                            href="#"
-                            id="GameModeToggle"
+                      <div class="row">
+                        <div class="col-12 col-sm-6 col-lg-3 my-3">
+                          <div
+                            class="d-inline-flex justify-content-center align-items-center w-100 h-100"
                           >
-                            <span class="fa fa-gamepad"></span> Enable Game Mode
-                          </a>
-                        </div>
-                        <div>
-                          <div class="heart-container" title="Like">
                             <input
-                              type="checkbox"
-                              class="checkbox"
-                              id="unlimited-lifes-check"
-                              value="true"
+                              type="hidden"
+                              id="mapPlayableFlag"
+                              value="false"
                             />
-                            <div class="svg-container">
-                              <svg
-                                viewBox="0 0 24 24"
-                                class="svg-outline"
-                                xmlns="http://www.w3.org/2000/svg"
-                              >
-                                <path
-                                  d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"
-                                ></path>
-                              </svg>
-                              <svg
-                                viewBox="0 0 24 24"
-                                class="svg-filled"
-                                xmlns="http://www.w3.org/2000/svg"
-                              >
-                                <path
-                                  d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"
-                                ></path>
-                              </svg>
-                              <svg
-                                class="svg-celebrate"
-                                width="100"
-                                height="100"
-                                xmlns="http://www.w3.org/2000/svg"
-                              >
-                                <polygon points="10,10 20,20"></polygon>
-                                <polygon points="10,50 20,50"></polygon>
-                                <polygon points="20,80 30,70"></polygon>
-                                <polygon points="90,10 80,20"></polygon>
-                                <polygon points="90,50 80,50"></polygon>
-                                <polygon points="80,80 70,70"></polygon>
-                              </svg>
-                            </div>
+                            <a
+                              class="btn btn-primary"
+                              href="#"
+                              id="GameModeToggle"
+                            >
+                              <span class="fa fa-gamepad"></span> Enable Game
+                              Mode
+                            </a>
                           </div>
                         </div>
-                        <div>
-                          <p class="m-0 ms-2">Enable Unlimited Lifes</p>
+                        <div
+                          class="unlimited-lifes-section col-12 col-sm-6 col-lg-3 my-3"
+                        >
+                          <div class="">
+                            <div class="heart-container mx-auto" title="Like">
+                              <input
+                                type="checkbox"
+                                class="checkbox"
+                                id="unlimited-lifes-check"
+                                value="true"
+                              />
+                              <div class="svg-container">
+                                <svg
+                                  viewBox="0 0 24 24"
+                                  class="svg-outline"
+                                  xmlns="http://www.w3.org/2000/svg"
+                                >
+                                  <path
+                                    d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"
+                                  ></path>
+                                </svg>
+                                <svg
+                                  viewBox="0 0 24 24"
+                                  class="svg-filled"
+                                  xmlns="http://www.w3.org/2000/svg"
+                                >
+                                  <path
+                                    d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"
+                                  ></path>
+                                </svg>
+                                <svg
+                                  class="svg-celebrate"
+                                  width="100"
+                                  height="100"
+                                  xmlns="http://www.w3.org/2000/svg"
+                                >
+                                  <polygon points="10,10 20,20"></polygon>
+                                  <polygon points="10,50 20,50"></polygon>
+                                  <polygon points="20,80 30,70"></polygon>
+                                  <polygon points="90,10 80,20"></polygon>
+                                  <polygon points="90,50 80,50"></polygon>
+                                  <polygon points="80,80 70,70"></polygon>
+                                </svg>
+                              </div>
+                            </div>
+                            <div class="unlimited-life-label">
+                              <p class="m-0 text-center">
+                                Enable Unlimited Lifes
+                              </p>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -451,7 +479,7 @@
                       <div class="dirs" style="display: none">
                         <form class="new-dir m-0 p-0">
                           <div class="row">
-                            <div class="col-9">
+                            <div class="col-6 col-sm-8 col-lg-9">
                               <input
                                 type="text"
                                 required
@@ -460,7 +488,7 @@
                                 class="form-control"
                               />
                             </div>
-                            <div class="col-3">
+                            <div class="col-6 col-sm-4 col-lg-3">
                               <button class="btn btn-success w-100">
                                 Create New
                               </button>
