--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -380,6 +380,18 @@
                             </div>
                           </div>
                         </div>
+                        <div
+                          class="winning-price-link col-12 col-sm-6 col-lg-3 my-3"
+                        >
+                          <div class="h-100 d-flex align-items-center w-100">
+                            <input
+                              type="url"
+                              id="winning-price-link"
+                              class="form-control"
+                              placeholder="Enter Game Winning Link!"
+                            />
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <div class="col-12">
