--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -280,7 +280,7 @@
                 <form class="form my-5 bg-light p-3 m-0 new_map_form">
                   <h3 class="text-center m-0 mb-3">New Map</h3>
                   <div class="row">
-                    <div class="col-12 col-md-6 col-lg-5 my-2">
+                    <div class="col-12 col-md-6 col-lg-6 my-2">
                       <input
                         placeholder="Map Name"
                         class="form-control"
@@ -296,16 +296,13 @@
                         id="mapLaunchDate"
                       />
                     </div>
-                    <div class="col-12 col-md-6 col-lg-2 my-2">
+                    <div class="col-12 col-md-6 col-lg-3 my-2">
                       <input
                         type="time"
                         class="form-control"
                         name="mapLaunchTime"
                         id="mapLaunchTime"
                       />
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-2 my-2">
-                      <button class="w-100 btn btn-warning">Create</button>
                     </div>
                     <div class="col-12 mt-3">
                       <div class="row">
@@ -390,6 +387,14 @@
                               class="form-control"
                               placeholder="Enter Game Winning Link!"
                             />
+                          </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-2 my-2">
+                          <div class="d-flex w-100 h-100 align-items-center">
+                            <button class="w-100 btn btn-warning">
+                              Create
+                            </button>
                           </div>
                         </div>
                       </div>
