--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -189,6 +189,14 @@
               <h1 class="text-warning" id="userRankAfterGameOver">1</h1>
               <p class="lead">Your Ranking</p>
             </div>
+            <% if(gameWinningUrl) {%>
+            <a
+              href="<%= gameWinningUrl %>"
+              target="_blank"
+              class="my-3 w-100 d-block btn btn-dark"
+              >Claim Your prize</a
+            >
+            <%}%>
             <a href="" class="btn btn-info m-2">Start Game</a>
             <a href="/user/profile" class="btn btn-secondary m-2"
               >Go Back to Profile</a
