--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -167,6 +167,11 @@
                       </button>
                     </div>
                     <div class="toggle-hide border-top mt-2 pt-2">
+                      <div class="particular-links text-center mt-2 mb-4">
+                        <button class="btn btn-primary presetEditor">
+                          <span class="fa fa-gears"></span> Preset
+                        </button>
+                      </div>
                       <div
                         class="header-live-updater row pb-3 mb-3 border-bottom"
                       >
