--- a/views/pages/admin_preset.ejs
+++ b/views/pages/admin_preset.ejs
@@ -19,18 +19,87 @@
         >
       </div>
     </div>
-    <div class="mt-5 text-light">
+    <div class="mt-5">
       <div class="container">
         <div id="g-map"></div>
-        <div class="my-3 images-container" style="display: none">
-          <div class="row justify-content-center">
-            <% images.forEach(img => { %>
-            <div class="col-4 col-md-3 col-lg-2">
-              <div class="img-container" data-src="<%=img%>">
-                <img src="/images/mapicons/<%=img%>" width="100%" />
-              </div>
+        <div
+          class="my-3 images-container justify-content-center row"
+          style="display: none"
+        >
+          <div class="m-0 p-0 col-sm-10 col-md-8 col-lg-6" method="POST">
+            <input type="hidden" name="polyCoords" />
+            <div class="form-group mb-2">
+              <input
+                type="text"
+                id="routeTitle"
+                class="form-control"
+                placeholder="Enter Route Title"
+              />
             </div>
-            <% }); %>
+            <div class="form-group mb-2">
+              <textarea
+                rows="8"
+                id="routeDescription"
+                class="form-control"
+                placeholder="Enter Route Description"
+              ></textarea>
+            </div>
+            <div class="form-group mb-2">
+              <p class="m-0">Adjust Radius (0-1000):</p>
+              <input
+                type="number"
+                max="1000"
+                step="1"
+                value="0"
+                class="form-control"
+                placeholder="Radius of Image"
+                id="radiusNum"
+              />
+            </div>
+            <div class="form-group mb-2">
+              <p class="m-0">Adjust Size (1-10):</p>
+              <input
+                type="number"
+                max="10"
+                min="1"
+                step="1"
+                value="5"
+                class="form-control"
+                placeholder="Size of Image"
+                id="sizeNum"
+              />
+            </div>
+            <div class="form-group mb-2">
+              <p>Opacity of Circle (0-100)</p>
+              <input
+                type="number"
+                min="0"
+                max="100"
+                value="100"
+                class="form-control"
+                id="loopOpacity"
+              />
+            </div>
+            <div class="form-group mb-2">
+              <p class="m-0">Image Speed (0-100):</p>
+              <input
+                type="number"
+                min="0"
+                value="1"
+                max="100"
+                id="imageSpeed"
+                class="form-control"
+              />
+            </div>
+            <div class="row justify-content-center">
+              <% images.forEach(img => { %>
+              <div class="col-6 col-sm-4 col-lg-3">
+                <div class="img-container" data-src="<%=img%>">
+                  <img src="/images/mapicons/<%=img%>" width="100%" />
+                </div>
+              </div>
+              <% }); %>
+            </div>
           </div>
         </div>
         <div class="navigation mt-3">
@@ -161,6 +230,13 @@
                 }
               });
               $(".roupo").click(function () {
+                uploadOption.title = $("#routeTitle").val();
+                uploadOption.description = $("#routeDescription").val();
+                uploadOption.size = $("#sizeNum").val();
+                uploadOption.radius = $("#radiusNum").val();
+                uploadOption.speed = $("#imageSpeed").val();
+                uploadOption.opacity = $("#loopOpacity").val();
+
                 $(this).attr("disabled", true);
                 $(this).text("Loading........");
                 $.post(
