--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -28,6 +28,7 @@
             <div class="title">Time Played</div>
           </div>
         </div>
+        <% if(lifes!=99){ %>
         <div class="col-6 col-md-4">
           <div class="text-center game-lifes">
             <div class="life-center">
@@ -39,6 +40,7 @@
             </div>
           </div>
         </div>
+        <%}%>
       </div>
     </div>
     <%}%>
