--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -52,7 +52,7 @@
       </div>
     </div>
     <% }else{ %>
-    <input id="playable" value="<%=playable%>" />
+    <input type="hidden" id="playable" value="<%=playable%>" />
     <input type="hidden" value="<%=timeFuture%>" id="countdownTimec" />
     <% if(pacman && pacman.coords){ %>
     <input
