--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -194,7 +194,8 @@
             <a
               href="<%= gameWinningUrl %>"
               target="_blank"
-              class="my-3 w-100 d-block btn btn-dark"
+              class="my-3 w-100 d-block btn btn-dark priceLinkBTN"
+              style="display: none"
               >Claim Your prize</a
             >
             <%}%>
