Fixed Game_Over, Radius Controller, etc

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -211,7 +211,7 @@
                           <p class="m-0">
                             <label
                               >Angle from North (<span id="angle-value">0</span
-                              >)</label
+                              >°)</label
                             >
                           </p>
                           <input
@@ -259,7 +259,7 @@
                           <label
                             >Pacman Attack Radius (<span id="radius-control"
                               >0</span
-                            >)</label
+                            >m)</label
                           >
                         </p>
                         <input
