--- a/views/pages/admin_preset.ejs
+++ b/views/pages/admin_preset.ejs
@@ -165,6 +165,7 @@
             };
             const tmPath = [];
             let centerMode = true;
+            let radiusCircle;
             const pos = {
               lat: position.coords.latitude,
               lng: position.coords.longitude,
@@ -175,8 +176,31 @@
               center: pos,
               mapId: "Main_Map",
             });
+
             centerMarker = new google.maps.marker.AdvancedMarkerElement({
               position: pos,
+            });
+
+            radiusCircle = new google.maps.Circle({
+              strokeColor: "#000000",
+              strokeOpacity: 0.8,
+              strokeWeight: 2,
+              fillColor: "#000000",
+              fillOpacity: 0.5,
+              center: pos,
+              radius: uploadOption.radius,
+            });
+
+            $("#radiusNum").on("input", function () {
+              const radius = parseInt($(this).val());
+              if (isNaN(radius) || radius < 0 || radius > 1000) return;
+              radiusCircle.setRadius(radius);
+            });
+
+            $("#loopOpacity").on("input", function () {
+              const opacity = parseInt($(this).val());
+              if (isNaN(opacity) || opacity < 0 || opacity > 100) return;
+              radiusCircle.setOptions({ fillOpacity: (opacity * 0.5) / 100 });
             });
 
             const pathImg = document.createElement("img");
@@ -232,6 +256,8 @@
                   $(".roupo").show();
                   pathMarker.setMap(map);
                   pathMarker.position = tmPath[0];
+                  radiusCircle.setCenter(tmPath[0]);
+                  radiusCircle.setMap(map);
                   pathImg.src = `/images/mapicons/${imgPath}`;
                   pathMarker.content = pathImg;
                 });
