Admin to upload preset from same map

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -147,6 +147,25 @@
                   <span class="fa fa-arrow-up"></span>
                 </div>
               </div>
+              <div class="routes-side-fixed">
+                <div>
+                  <button
+                    class="rounded-0 btn btn-primary presetBTN"
+                    title="Preset Mode"
+                  >
+                    <span class="fa fa-power-off"></span>
+                  </button>
+                </div>
+                <div>
+                  <button
+                    class="rounded-0 btn btn-info presetCenterSaveBTN"
+                    title="Preset Mode"
+                    style="display: none"
+                  >
+                    <span class="fa fa-save"></span>
+                  </button>
+                </div>
+              </div>
               <div class="map-container">
                 <div class="g-map vh-100"></div>
                 <div class="map-controller" style="display: none">
