--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -302,6 +302,7 @@
   box-shadow: -2px -2px 10px 0 grey;
   border: 1px solid grey;
   border-bottom: none;
+  z-index: 9;
 }
 
 @media screen and (max-width: 440px) {
@@ -525,4 +526,12 @@
 
 .file-folder:hover:before {
   transform: skewX(-5deg) rotateX(20deg);
+}
+
+.routes-side-fixed {
+  position: fixed;
+  z-index: 9;
+  right: 0;
+  top: 30%;
+  overflow: hidden;
 }
