--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -196,7 +196,7 @@
               target="_blank"
               class="my-3 w-100 btn btn-dark priceLinkBTN"
               style="display: none"
-              >Claim Your prize</a
+              >Tap to Access</a
             >
             <%}%>
             <a href="" class="btn btn-info m-2">Start Game</a>
