Added Buttons inline

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -602,6 +602,12 @@
                   </div>
                 </div>
               </div>
+              <div class="embed-container" style="display: none">
+                <div class="embed-title">Copy the embed code below:</div>
+                <div class="code-box" id="iframeCode"></div>
+                <button class="copy-iframe-button btn btn-primary">Copy</button>
+                <button class="close-button">Copy</button>
+              </div>
               <table class="table table-striped">
                 <thead>
                   <th>Name</th>
