--- a/views/pages/Leaderboard.ejs
+++ b/views/pages/Leaderboard.ejs
@@ -119,6 +119,14 @@
       ::-webkit-scrollbar {
         display: none;
       }
+
+      .error {
+        text-align: center;
+        color: #ff7e7e;
+        text-shadow: 0 0 10px rgb(255 130 130 / 50%);
+        margin-bottom: 30px;
+        font-size: 1.5rem;
+      }
     </style>
   </head>
   <body>
@@ -134,6 +142,9 @@
       <div class="inner">
         <h1><%= title.toUpperCase()%> - Leaderboard</h1>
         <div class="table-wrapper">
+          <% if (nodata) { %>
+          <div class="error">No Data Available</div>
+          <% }else{ %>
           <table>
             <thead>
               <tr>
@@ -154,6 +165,7 @@
               <% }) %>
             </tbody>
           </table>
+          <%}%>
         </div>
       </div>
     </div>
